Fixed horizontal aligning of donut percentage charts

--- a/css/main.css
+++ b/css/main.css
@@ -2611,7 +2611,7 @@ footer .copyright span:last-child::after {
 .donut-percent-container {
 	display: flex;
 	flex-direction: column;
-	margin-left: 25%;
+	align-items: center;
 }
 
 .donut-percent-value {
